<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#15C1FF"
    tools:context=".MenuParametres" android:screenOrientation="portrait">

    <TextView
        android:id="@+id/titreParametresTemp"
        android:layout_width="355dp"
        android:layout_height="108dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/titreMenuAqua"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/boutonParametresTemperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <Button
        android:id="@+id/boutonParametresTemperature"
        android:layout_width="333dp"
        android:layout_height="66dp"
        android:layout_marginBottom="28dp"
        android:text="@string/ParamtemperatureEau"
        app:backgroundTint="#2536B0"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/boutonParametresLumiere"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boutonParametresLumiere"
        android:layout_width="333dp"
        android:layout_height="66dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btnInfoLumiere"
        app:backgroundTint="#2536B0"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/boutonParametresNourriture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boutonParametresNourriture"
        android:layout_width="333dp"
        android:layout_height="66dp"
        android:layout_marginBottom="148dp"
        android:text="@string/ParamNourriture"
        app:backgroundTint="#2536B0"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boutonRetour"
        android:layout_width="120dp"
        android:layout_height="66dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="44dp"
        android:text="@string/btnRetour"
        app:backgroundTint="#2536B0"
        app:cornerRadius="30dp"
        app:iconTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>