<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#15C1FF"
    tools:context=".affichage_temperature"
    android:screenOrientation="portrait">


    <TextView
        android:id="@+id/titreAffichage"
        android:layout_width="355dp"
        android:layout_height="108dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/titreAfficheTemp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/boutonMofifierParametres"
        android:layout_width="329dp"
        android:layout_height="77dp"
        android:layout_marginBottom="172dp"
        android:text="@string/txtBtnModifParam"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:backgroundTint="#2536B0"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boutonRetourInfos"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="44dp"
        android:text="@string/txtBtnRetourInfos"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:backgroundTint="#2536B0"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="124dp"
        android:layout_height="75dp"
        android:layout_marginTop="188dp"
        android:gravity="center_horizontal"
        android:text=""
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titreAffichage" />

    <TextView
        android:id="@+id/degre"
        android:layout_width="98dp"
        android:layout_height="78dp"
        android:layout_marginTop="184dp"
        android:gravity="center_horizontal"
        android:text="°C"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/boutonMofifierParametres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titreAffichage"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageThermometre"
        android:layout_width="276dp"
        android:layout_height="505dp"
        android:layout_marginEnd="196dp"
        android:layout_marginRight="196dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <TextView
        android:id="@+id/informationTemperature"
        android:layout_width="345dp"
        android:layout_height="31dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/boutonMofifierParametres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperature" />

    <ImageView
        android:id="@+id/imageDecors"
        android:layout_width="49dp"
        android:layout_height="43dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

</androidx.constraintlayout.widget.ConstraintLayout>